--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <input id="country-of-origin" type="text">
       <input id="year-of-prod" type="number">
 
-      <button onclick="submitEntry()">add delicious item</button>
+      <button onclick="submitEntry()">add item</button>
 
   </div>
 
