--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,32 @@
     <meta charset="UTF-8">
     <title>title</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
-  <link rel="stylesheet" href="stylesheet.css" type="text/css">
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
   </head>
 
   <body>
-  <div>
+    <div>
 
-      <input id="name" type="text" placeholder="just holding the place">
-      <input id="distillery-name" type="text" placeholder="here for the company">
-      <input id="country-of-origin" type="text">
-      <input id="year-of-prod" type="number">
+        <label>Some shit</label>
+        <input id="name" type="text" placeholder="enter name">
+        <br>
 
-      <button onclick="submitEntry()">add item</button>
+        <label>Enter Distillery Name:</label>
+        <input id="distillery-name" type="text" placeholder="enter distillery name">
+        <br>
 
-  </div>
+        <label>Enter Country of Origin:</label>
+        <input id="country-of-origin" type="text" placeholder="enter where it is from">
+        <br>
+        s
+        <label>Enter Year of Production</label>
+        <input id="year-of-prod" type="number" placeholder="enter year of production">
+        <br>
 
-  <script src="app.js" type="text/javascript"></script>
+        <button onclick="submitEntry()">Add Item</button>
+
+    </div>
+
+    <script src="app.js" type="text/javascript"></script>
   </body>
-
 </html>
